--- a/configurations/TOI4504/TOI-4504_T100.ini
+++ b/configurations/TOI4504/TOI-4504_T100.ini
@@ -22,21 +22,21 @@ year = day * 365.24219       # [s] Approximately one tropical earth year in seco
 rad2deg = 57.29577951308232  # 180 / pi
 
 [Results]                    # Comment out the first parameter if you do not need the results (transit times etc.) of the simulation.
-result_file = TOI-4504_debug.json  # <string> simulation results like transit times are saved in this file
+result_file = TOI-4504_T100.json  # <string> simulation results like transit times are saved in this file
 result_dt = 75000            # Real time differences between simulation iterations when calculating transit times.
                              # This parameter is only used after the main simulation for finding the precise values for the transit parameters.
 max_interval_extensions = 5  # In unstable systems or when using a very large dt, sometimes the search for an TT has to be extended
                              # If no TT has been found max_interval_extensions * dt around the expected interval between 2 iterations
                              # the search for this particular TT will be aborted. (dt comes from the list dts.)
-comment = debug              # You can use this comment for example as diagram title in your result plots
+comment = T100_1stJacobi_fit # You can use this comment for example as diagram title in your result plots
 ;verbose = True              # If False, only error messages will be printed to the console. Useful when running MCMC. Default: False
 
 [Simulation]                 # Time intervalls and time steps of the simulation
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
 ;action = results_only        # No simulating, no fitting. Just read some results and generate reports.
-results_directory = ../results/debug  # All results are saved in the next available numbered subdirectory
-action = single_run          # No fitting. Just a single run of the simulation.
-;action = mcmc
+results_directory = ../results  # All results are saved in the next available numbered subdirectory
+;action = single_run          # No fitting. Just a single run of the simulation.
+action = mcmc
 ;action = lmfit
 ;action = guifit
 start_date = 2458400         # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
@@ -47,7 +47,6 @@ dt = 75000                   # [s] <float> real time difference between simulati
                              # Set dt to a relatively high value, to improve performance when running MCMC
                              # Set dt to a relatively low value, when you want exact transit times in the result file.
 starts = [2458400]           # [days] <float> starting times of the intervalls for which simulation data will be calculated
-;ends =   [2458415]           # [days] <float>   ending times of the intervalls for which simulation data will be calculated
 ends =   [2460920]           # [days] <float>   ending times of the intervalls for which simulation data will be calculated
 dts =    [75000]             # [s] <float> real time differences between simulation iterations inside each intervall
                              # When fitting the simulation to measured flux, dt is typically identical with the exposure time of each measurement.
@@ -87,11 +86,15 @@ eclipsers_names = TOI4504c, TOI4504d  # only primary transits by these bodies ar
 eclipsees_names = TOI4504              # only transits eclipsing these bodies are relevant when fitting for TT
 target_flux = 0.985  # Expected normalized flux during transits. Used for a simplified fitting of the transits
                      # times without searching for the precise transit times in the simulated flux
-;backend = X055_backend.h5
+
+;fitting_results_directory = ../results/mcmc  # All MCMC results are saved in the next available numbered subdirectory
+;backend = T058_backend.h5
 ;load_backend = True
-walkers = 32             # Number of mcmc chains
-burn_in = 1              # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
-steps = 1e7              # Number of mcmc steps after burn-in phase
+walkers = 32#512             # Number of mcmc chains
+burn_in = 1#5000             # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
+thin_samples = 1#60          # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
+chunk_size = 1#1000           # Every chunk_size steps after burn-in phase, results will be saved.
+steps = 1e7                # Number of mcmc steps after burn-in phase
 
 moves =  (emcee.moves.StretchMove(a=8.0)     )            # Algorithm emcee uses moves for changing the parameters after each iteration
 ;moves =  (emcee.moves.StretchMove(a=2.0)     )
@@ -110,13 +113,11 @@ moves =  (emcee.moves.StretchMove(a=8.0)     )            # Algorithm emcee uses
 # KDEMove: Use MANY walkers!
 # GaussianMove: braucht covarianz als Argument?!?!
 
-thin_samples = 1            # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
-chunk_size = 1             # Every chunk_size steps after burn-in phase, results will be saved.
 bins = 200#, 30              # Number of bins in mcmc histograms. May be several values separated by comma. Then a histogram will be generated for every bin value.
 ;unit = {"mass": "m_earth", "radius": "r_earth", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
 unit = {"mass": "m_jup", "radius": "r_jup", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
                              # Specify for each of the above body parameters its unit to be used in mcmc result plots
-;scale = {"mass": 1/m_earth, "radius": 1/r_earth, "e": 1, "i": rad2deg, "P": 1/day, "a": 1/au, "Omega": rad2deg, "omega": rad2deg, "pomega": rad2deg, "L": rad2deg, "ma": rad2deg, "ea": rad2deg, "nu": rad2deg, "T": 1, "t": 1}
+;scale = {"mass": 1/m_earth, "radius": 1/r_earth, "e": 1, "i": rad2deg, "P": 1 /day, "a": 1/au, "Omega": rad2deg, "omega": rad2deg, "pomega": rad2deg, "L": rad2deg, "ma": rad2deg, "ea": rad2deg, "nu": rad2deg, "T": 1, "t": 1}
 scale = {"mass": 1/m_jup, "radius": 1/r_jup, "e": 1, "i": rad2deg, "P": 1/day, "a": 1/au, "Omega": rad2deg, "omega": rad2deg, "pomega": rad2deg, "L": rad2deg, "ma": rad2deg, "ea": rad2deg, "nu": rad2deg, "T": 1, "t": 1}
                              # Specify for each of the above body parameters the value it has
                              # to be multiplied with in order to represent its above specified unit.
@@ -125,7 +126,7 @@ scale = {"mass": 1/m_jup, "radius": 1/r_jup, "e": 1, "i": rad2deg, "P": 1/day, "
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
                              # Comment out the first parameter to prevent video generation.
 ;video_file = ../animations/TOI-4504.mp4  # <string> the resulting video is saved in this file
-frames = 20                  # <int> number of frames of video. Proportional to Curvesimulator's run time
+frames = 60                  # <int> number of frames of video. Proportional to Curvesimulator's run time
                              # and to the length of the animation.
 fps = 10                     # <int> frames per second in video. Proportional to the velocity of the
                              # objects in the animation. Inverse proportional to length of video.
@@ -196,9 +197,9 @@ primary =   TOI-4504
 color =     0.01, 0.99, 0.01
 #           value               lower bound       upper bound        sigma
 mass =      2.1278 * m_jup,     1.0 * m_jup,      5.0 * m_jup,       0.04 * m_jup
-radius =    1.012 * r_jup,      0.2 * r_jup,      4.0 * r_jup,       0.00005 * r_jup
+radius =    1.012 * r_jup,    # 0.2 * r_jup,      4.0 * r_jup,       0.8 * r_jup
 e =         0.2498,             0.0,              0.5,               0.005
-i =         91.09,              90.00,            92.0,              0.3
+i =         91.10,            # 91.00,            91.25,             0.01
 P =         41.7878 * day,      40 * day,         43 * day,          0.03 * day
 Omega =     0.24,               -10,              10,                2.7
 omega =     275.80,             100,              460,               4.0
@@ -211,9 +212,9 @@ primary =   TOI-4504
 color =     0.99, 0.99, 0.01
 #           value               lower bound       upper bound        sigma
 mass =      2.6315 * m_jup,     1.0 * m_jup,      5.0 * m_jup,       0.025 * m_jup
-radius =    0.9897 * r_jup,     0.5 * r_jup,      2.0 * r_jup,       0.2 * r_jup
+radius =    0.9897 * r_jup,   # 0.8 * r_jup,      1.2 * r_jup,       0.15 * r_jup
 e =         0.0377,            0.0,              0.5,               0.0035
-i =         89.69,              89.25,            90.0,              0.3
+i =         89.69,            # 89.25,            90.0,              0.2
 P =         81.4631 * day,      80.0 * day,       84 * day,          0.07 * day
 Omega =     0.8,
 omega =     298.89,             200,              400,               6.0
