--- a/configurations/TOI4504/TOI-4504_Vitkova.ini
+++ b/configurations/TOI4504/TOI-4504_Vitkova.ini
@@ -22,7 +22,7 @@ year = day * 365.24219       # [s] Approximately one tropical earth year in seco
 rad2deg = 57.29577951308232  # 180 / pi
 
 [Results]                    # Comment out the first parameter if you do not need the results (transit times etc.) of the simulation.
-result_file = ../results/TOI-4504_VitkovaMaxL.json  # <string> simulation results like transit times are saved in this file
+result_file = TOI-4504_VitkovaMaxL.json  # <string> simulation results like transit times are saved in this file
 result_dt = 75000            # Real time differences between simulation iterations when calculating transit times.
                              # This parameter is only used after the main simulation for finding the precise values for the transit parameters.
 max_interval_extensions = 5  # In unstable systems or when using a very large dt, sometimes the search for an TT has to be extended
@@ -33,8 +33,8 @@ verbose = True              # If False (which is default), only error messages w
 
 [Simulation]                 # Time intervalls and time steps of the simulation
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
-;single_run = True            # No fitting. Just a single run of the simulation.
-results_only = True          # No simulating, no fitting. Just read some results and generate reports. Default: False
+results_directory = ../results  # All results are saved in the next available numbered subdirectory
+action = single_run          # No fitting. Just a single run of the simulation.
 start_date = 2458400         # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
 dt = 75000                  # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
                              # Needs to be small enough in order to calculate with sufficient
@@ -43,7 +43,7 @@ dt = 75000                  # [s] <float> real time difference between simulatio
                              # Set dt to a relatively high value, to improve performance when running MCMC
                              # Set dt to a relatively low value, when you want exact transit times in the result file.
 starts = [2458400]           # [days] <float> starting times of the intervalls for which simulation data will be calculated
-ends =   [2460920]           # [days] <float>   ending times of the intervalls for which simulation data will be calculated
+ends =   [2461000]           # [days] <float>   ending times of the intervalls for which simulation data will be calculated
 dts =    [75000]             # [s] <float> real time differences between simulation iterations inside each intervall
                              # When fitting the simulation to measured flux, dt is typically identical with the exposure time of each measurement.
                              # Together, starts, ends and dts define the total number of simulation iterations 'total_iterations' for
@@ -61,7 +61,7 @@ sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err 
 
 
 [Fitting]                    # This section is only relevant for running a MCMC algorithm to fit the simulation to real data
-                             # Comment out the first parameter if you do not want to fit the simulation to real data
+free_parameters = 13         # Number of free parameters in the fitting model. Relevant for calculating p-value from Chi squared.
 ;flux_file = ../data/TOI-4504/TOI4504_transits_sm0_3til94.csv  # <string> file with flux measurements (real data)
 ;flux_file = ../data/TOI-4504/TOI4504_b_transits_27til94.csv  # <string> file with flux measurements (real data)
 ;flux_file = ../data/TOI-4504/TOI4504_b_transits_bin1200_27til94.csv  # <string> file with flux measurements (real data)
@@ -75,13 +75,12 @@ lmfit_method = powell
 ;guifit = True                # True for interactive fit via GUI, False for MCMC
 flux_weight = 1  # weighting flux residuals against rv and tt residuals
 ;rv_file = ../data/TOI-4504/rv.csv # <string> file with radial velocity measurements (real data)
-rv_offset = 2064.7           # Estimate of the velocity measurement that corresponds to zero radial velocity of the object
-
-tt_file = ../data/TOI-4504/tt.csv # <string> file with measured transit times (real data)
+rv_body = TOI4504
+tt_file = ../data/TOI-4504/tt14.csv # <string> file with measured transit times (real data)
 ;tt_file = ../data/TOI-4504/tt_vitkova_prognose.csv # <string> file with measured transit times (real data)
 ;tt_file = ../data/simulations/tt_sim.csv # <string> file with measured transit times (real data)
 tt_weight = 1  # weighting tt residuals against rv and flux residuals
-eclipsers_names = TOI4504c, TOI4504d  # only primary transits by these bodies are relevant when fitting for TT
+eclipsers_names = TOI4504c  # only primary transits by these bodies are relevant when fitting for TT
 eclipsees_names = TOI4504              # only transits eclipsing these bodies are relevant when fitting for TT
 target_flux = 0.985  # Expected normalized flux during transits. Used for a simplified fitting of the transits
                      # times without searching for the precise transit times in the simulated flux
@@ -155,8 +154,10 @@ figure_width = 16            # <int>   width of figure which contains all plots 
 figure_height = 8            # <int>   height of figure which contains all plots and animations
 xlim = 1.25                  # <float> left and right view both show x-values between -Xlim and + Xlim
 ylim = 1.0                   # <float> left and right view both show y-values between -Ylim and + Ylim
-flux_dot_height = 1/20        # <float> height of red dot in light curve plot relative to height of y-axis
-flux_dot_width = 1/235        # <float> width of red dot in light curve plot relative to width of x-axis
+flux_dot_height = 1/17       # <float> height of red dot in light curve plot relative to height of y-axis
+flux_dot_width = 1/335       # <float> width of red dot in light curve plot relative to width of x-axis
+rv_dot_height = 1/17         # <float> height of red dot in light curve plot relative to height of y-axis
+rv_dot_width = 1/335         # <float> width of red dot in light curve plot relative to width of x-axis
 
 
 [TOI4504]
@@ -217,6 +218,3 @@ P =         82.5383 * day
 Omega =     -0.8
 omega =     268.4
 ma =        175.4
-
-
-
