--- a/configurations/TOI4504/debug.ini
+++ b/configurations/TOI4504/debug.ini
@@ -29,13 +29,15 @@ max_interval_extensions = 5  # In unstable systems or when using a very large dt
                              # If no TT has been found max_interval_extensions * dt around the expected interval between 2 iterations
                              # the search for this particular TT will be aborted. (dt comes from the list dts.)
 comment = debug              # You can use this comment for example as diagram title in your result plots
+flux_data_directory = ../data/TOI-4504/fluxdata
 ;verbose = True              # If False, only error messages will be printed to the console. Useful when running MCMC. Default: False
 
 [Simulation]                 # Time intervalls and time steps of the simulation
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
 ;action = results_only        # No simulating, no fitting. Just read some results and generate reports.
 results_directory = ../results/debug  # All results are saved in the next available numbered subdirectory
-action = single_run          # No fitting. Just a single run of the simulation.
+action = get_tess_data       # Download observed flux
+;action = single_run          # No fitting. Just a single run of the simulation.
 ;action = mcmc
 ;action = lmfit
 ;action = guifit
@@ -79,8 +81,8 @@ lmfit_method = powell
 flux_weight = 1  # weighting flux residuals against rv and tt residuals
 ;rv_file = ../data/TOI-4504/rv.csv # <string> file with radial velocity measurements (real data)
 rv_body = TOI4504
-tt_file = ../data/TOI-4504/tt.csv # <string> file with measured transit times (real data)
-;tt_file = ../data/simulations/tt_sim.csv # <string> file with measured transit times (real data)
+tt_file = ../data/TOI-4504/tt_debug.csv # <string> file with measured transit times (real data)
+;tt_file = ../data/TOI-4504/tt.csv # <string> file with measured transit times (real data)
 tt_padding = 0.225  # [days] x-axis (time) in flux plots of single transits goes from TT - tt_padding til TT + tt_padding, default 0.3
 flux_plots_top = 1.01  # y-axis top in normalized flux plots, default 1.015
 flux_plots_bottom = 0.975  # y-axis bottom in normalized flux plots, default 0.97
