--- a/configurations/TOI4504/debug.ini
+++ b/configurations/TOI4504/debug.ini
@@ -37,8 +37,8 @@ flux_data_directory = ../data/TOI-4504/fluxdata
 ;action = results_only        # No simulating, no fitting. Just read some results and generate reports.
 results_directory = ../results/debug  # All results are saved in the next available numbered subdirectory
 ;action = get_tess_data       # Download observed flux
-action = process_tess_data   # Normalize observed flux and extract flux during (and around) transits
-;action = single_run          # No fitting. Just a single run of the simulation.
+;action = process_tess_data   # Normalize observed flux and extract flux during (and around) transits
+action = single_run          # No fitting. Just a single run of the simulation.
 ;action = mcmc
 ;action = lmfit
 ;action = guifit
