--- a/configurations/TOI4504/TOI-4504_F100.ini
+++ b/configurations/TOI4504/TOI-4504_F100.ini
@@ -22,28 +22,23 @@ year = day * 365.24219       # [s] Approximately one tropical earth year in seco
 rad2deg = 57.29577951308232  # 180 / pi
 
 [Results]                    # Comment out the first parameter if you do not need the results (transit times etc.) of the simulation.
-result_file = TOI-4504_debug.json  # <string> simulation results like transit times are saved in this file
+result_file = TOI-4504_F100.json  # <string> simulation results like transit times are saved in this file
 result_dt = 75000            # Real time differences between simulation iterations when calculating transit times.
                              # This parameter is only used after the main simulation for finding the precise values for the transit parameters.
 max_interval_extensions = 5  # In unstable systems or when using a very large dt, sometimes the search for an TT has to be extended
                              # If no TT has been found max_interval_extensions * dt around the expected interval between 2 iterations
                              # the search for this particular TT will be aborted. (dt comes from the list dts.)
-comment = debug              # You can use this comment for example as diagram title in your result plots
-flux_data_directory = ../data/TOI-4504/fluxdata
+comment = F100_withSector97     # You can use this comment for example as diagram title in your result plots
 ;verbose = True              # If False, only error messages will be printed to the console. Useful when running MCMC. Default: False
 
 [Simulation]                 # Time intervalls and time steps of the simulation
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
 ;action = results_only        # No simulating, no fitting. Just read some results and generate reports.
-results_directory = ../results/debug  # All results are saved in the next available numbered subdirectory
-;action = get_tess_data       # Download observed flux
-;action = process_tess_data   # Normalize observed flux and extract flux during (and around) transits
-action = single_run          # No fitting. Just a single run of the simulation.
-;action = mcmc
+results_directory = ../results  # All results are saved in the next available numbered subdirectory
+;action = single_run          # No fitting. Just a single run of the simulation.
+action = mcmc
 ;action = lmfit
 ;action = guifit
-;processed_flux_file = processed_flux_file.csv
-
 start_date = 2458400         # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
 dt = 75000                   # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
                              # Needs to be small enough in order to calculate with sufficient
@@ -72,7 +67,6 @@ sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err 
 [Fitting]                    # This section is only relevant for running a MCMC algorithm to fit the simulation to real data
 free_parameters = 13         # Number of free parameters in the fitting model. Relevant for calculating p-value from Chi squared.
 flux_file = ../data/TOI-4504/TOI4504_transits_0.45d_3-97.csv  # <string> file with flux measurements (real data)
-;flux_file = ../data/TOI-4504/TOI4504_transits_sm0_3til95.csv  # <string> file with flux measurements (real data)
                              # flux_file has 3 columns: time [days], normalized flux, normalized flux standard deviation
                              # While fitting, no result file and no video will be generated.
 ;guifit = True                # True for interactive fit via GUI. Default: False
@@ -81,25 +75,23 @@ lmfit_method = powell
 ;lmfit_method = differential_evolution
 ;lmfit_method = nelder
 flux_weight = 1  # weighting flux residuals against rv and tt residuals
-rv_file = ../data/TOI-4504/rv.csv # <string> file with radial velocity measurements (real data)
+;rv_file = ../data/TOI-4504/rv.csv # <string> file with radial velocity measurements (real data)
 rv_body = TOI4504
-
-tt_file = ../data/TOI-4504/tt.csv # <string> file with measured transit times (real data)
-;tt_file = ../data/TOI-4504/tt_debug.csv # <string> file with measured transit times (real data)
-
-tt_padding = 0.225  # [days] x-axis (time) in flux plots of single transits goes from TT - tt_padding til TT + tt_padding, default 0.3
-flux_plots_top = 1.01  # y-axis top in normalized flux plots, default 1.015
-flux_plots_bottom = 0.975  # y-axis bottom in normalized flux plots, default 0.97
+;tt_file = ../data/TOI-4504/tt.csv # <string> file with measured transit times (real data)
 tt_weight = 1  # weighting tt residuals against rv and flux residuals
 eclipsers_names = TOI4504c, TOI4504d  # only primary transits by these bodies are relevant when fitting for TT
 eclipsees_names = TOI4504              # only transits eclipsing these bodies are relevant when fitting for TT
 target_flux = 0.985  # Expected normalized flux during transits. Used for a simplified fitting of the transits
                      # times without searching for the precise transit times in the simulated flux
-;backend = X055_backend.h5
+
+;fitting_results_directory = ../results/mcmc  # All MCMC results are saved in the next available numbered subdirectory
+;backend = T058_backend.h5
 ;load_backend = True
-walkers = 32             # Number of mcmc chains
-burn_in = 1              # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
-steps = 1e7              # Number of mcmc steps after burn-in phase
+walkers = 32#512              # Number of mcmc chains
+burn_in = 1#2000             # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
+thin_samples = 1#60          # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
+chunk_size = 10#1000          # Every chunk_size steps after burn-in phase, results will be saved.
+steps = 1e8                # Number of mcmc steps after burn-in phase
 
 moves =  (emcee.moves.StretchMove(a=8.0)     )            # Algorithm emcee uses moves for changing the parameters after each iteration
 ;moves =  (emcee.moves.StretchMove(a=2.0)     )
@@ -118,13 +110,11 @@ moves =  (emcee.moves.StretchMove(a=8.0)     )            # Algorithm emcee uses
 # KDEMove: Use MANY walkers!
 # GaussianMove: braucht covarianz als Argument?!?!
 
-thin_samples = 1            # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
-chunk_size = 1             # Every chunk_size steps after burn-in phase, results will be saved.
 bins = 200#, 30              # Number of bins in mcmc histograms. May be several values separated by comma. Then a histogram will be generated for every bin value.
 ;unit = {"mass": "m_earth", "radius": "r_earth", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
 unit = {"mass": "m_jup", "radius": "r_jup", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
                              # Specify for each of the above body parameters its unit to be used in mcmc result plots
-;scale = {"mass": 1/m_earth, "radius": 1/r_earth, "e": 1, "i": rad2deg, "P": 1/day, "a": 1/au, "Omega": rad2deg, "omega": rad2deg, "pomega": rad2deg, "L": rad2deg, "ma": rad2deg, "ea": rad2deg, "nu": rad2deg, "T": 1, "t": 1}
+;scale = {"mass": 1/m_earth, "radius": 1/r_earth, "e": 1, "i": rad2deg, "P": 1 /day, "a": 1/au, "Omega": rad2deg, "omega": rad2deg, "pomega": rad2deg, "L": rad2deg, "ma": rad2deg, "ea": rad2deg, "nu": rad2deg, "T": 1, "t": 1}
 scale = {"mass": 1/m_jup, "radius": 1/r_jup, "e": 1, "i": rad2deg, "P": 1/day, "a": 1/au, "Omega": rad2deg, "omega": rad2deg, "pomega": rad2deg, "L": rad2deg, "ma": rad2deg, "ea": rad2deg, "nu": rad2deg, "T": 1, "t": 1}
                              # Specify for each of the above body parameters the value it has
                              # to be multiplied with in order to represent its above specified unit.
@@ -133,7 +123,7 @@ scale = {"mass": 1/m_jup, "radius": 1/r_jup, "e": 1, "i": rad2deg, "P": 1/day, "
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
                              # Comment out the first parameter to prevent video generation.
 ;video_file = ../animations/TOI-4504.mp4  # <string> the resulting video is saved in this file
-frames = 20                  # <int> number of frames of video. Proportional to Curvesimulator's run time
+frames = 60                  # <int> number of frames of video. Proportional to Curvesimulator's run time
                              # and to the length of the animation.
 fps = 10                     # <int> frames per second in video. Proportional to the velocity of the
                              # objects in the animation. Inverse proportional to length of video.
@@ -204,9 +194,9 @@ primary =   TOI-4504
 color =     0.01, 0.99, 0.01
 #           value               lower bound       upper bound        sigma
 mass =      2.1278 * m_jup,     1.0 * m_jup,      5.0 * m_jup,       0.04 * m_jup
-radius =    1.012 * r_jup,      0.2 * r_jup,      4.0 * r_jup,       0.00005 * r_jup
+radius =    1.012 * r_jup,    # 0.2 * r_jup,      4.0 * r_jup,       0.8 * r_jup
 e =         0.2498,             0.0,              0.5,               0.005
-i =         91.09,              90.00,            92.0,              0.3
+i =         91.10,            # 91.00,            91.25,             0.01
 P =         41.7878 * day,      40 * day,         43 * day,          0.03 * day
 Omega =     0.24,               -10,              10,                2.7
 omega =     275.80,             100,              460,               4.0
@@ -219,9 +209,9 @@ primary =   TOI-4504
 color =     0.99, 0.99, 0.01
 #           value               lower bound       upper bound        sigma
 mass =      2.6315 * m_jup,     1.0 * m_jup,      5.0 * m_jup,       0.025 * m_jup
-radius =    0.9897 * r_jup,     0.5 * r_jup,      2.0 * r_jup,       0.2 * r_jup
+radius =    0.9897 * r_jup,   # 0.8 * r_jup,      1.2 * r_jup,       0.15 * r_jup
 e =         0.0377,            0.0,              0.5,               0.0035
-i =         89.69,              89.25,            90.0,              0.3
+i =         89.69,            # 89.25,            90.0,              0.2
 P =         81.4631 * day,      80.0 * day,       84 * day,          0.07 * day
 Omega =     0.8,
 omega =     298.89,             200,              400,               6.0
