--- a/configurations/TOI4504/TOI-4504_F100.ini
+++ b/configurations/TOI4504/TOI-4504_F100.ini
@@ -34,7 +34,7 @@ comment = F100_withSector97     # You can use this comment for example as diagra
 [Simulation]                 # Time intervalls and time steps of the simulation
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
 ;action = results_only        # No simulating, no fitting. Just read some results and generate reports.
-results_directory = ../results  # All results are saved in the next available numbered subdirectory
+results_directory = ../results/mcmc  # All results are saved in the next available numbered subdirectory
 ;action = single_run          # No fitting. Just a single run of the simulation.
 action = mcmc
 ;action = lmfit
@@ -87,10 +87,10 @@ target_flux = 0.985  # Expected normalized flux during transits. Used for a simp
 ;fitting_results_directory = ../results/mcmc  # All MCMC results are saved in the next available numbered subdirectory
 ;backend = T058_backend.h5
 ;load_backend = True
-walkers = 32#512              # Number of mcmc chains
-burn_in = 1#2000             # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
-thin_samples = 1#60          # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
-chunk_size = 10#1000          # Every chunk_size steps after burn-in phase, results will be saved.
+walkers = 512              # Number of mcmc chains
+burn_in = 500             # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
+thin_samples = 50          # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
+chunk_size = 500          # Every chunk_size steps after burn-in phase, results will be saved.
 steps = 1e8                # Number of mcmc steps after burn-in phase
 
 moves =  (emcee.moves.StretchMove(a=8.0)     )            # Algorithm emcee uses moves for changing the parameters after each iteration
@@ -194,9 +194,9 @@ primary =   TOI-4504
 color =     0.01, 0.99, 0.01
 #           value               lower bound       upper bound        sigma
 mass =      2.1278 * m_jup,     1.0 * m_jup,      5.0 * m_jup,       0.04 * m_jup
-radius =    1.012 * r_jup,    # 0.2 * r_jup,      4.0 * r_jup,       0.8 * r_jup
+radius =    1.012 * r_jup,      0.2 * r_jup,      4.0 * r_jup,       0.8 * r_jup
 e =         0.2498,             0.0,              0.5,               0.005
-i =         91.10,            # 91.00,            91.25,             0.01
+i =         91.10,              91.00,            91.25,             0.01
 P =         41.7878 * day,      40 * day,         43 * day,          0.03 * day
 Omega =     0.24,               -10,              10,                2.7
 omega =     275.80,             100,              460,               4.0
@@ -209,9 +209,9 @@ primary =   TOI-4504
 color =     0.99, 0.99, 0.01
 #           value               lower bound       upper bound        sigma
 mass =      2.6315 * m_jup,     1.0 * m_jup,      5.0 * m_jup,       0.025 * m_jup
-radius =    0.9897 * r_jup,   # 0.8 * r_jup,      1.2 * r_jup,       0.15 * r_jup
-e =         0.0377,            0.0,              0.5,               0.0035
-i =         89.69,            # 89.25,            90.0,              0.2
+radius =    0.9897 * r_jup,     0.8 * r_jup,      1.2 * r_jup,       0.15 * r_jup
+e =         0.0377,             0.0,              0.5,               0.0035
+i =         89.69,              89.25,            90.0,              0.2
 P =         81.4631 * day,      80.0 * day,       84 * day,          0.07 * day
 Omega =     0.8,
 omega =     298.89,             200,              400,               6.0
